@@ -237,6 +237,14 @@
   },
   "active": "ac3bfd54f79a519e",
   "lastOpenFiles": [
+    "Pasted image 20260227082724.png.import",
+    "Pasted image 20260227082724.png",
+    "Pasted image 20260227082632.png.import",
+    "Pasted image 20260227082632.png",
+    "Pasted image 20260227082552.png.import",
+    "Pasted image 20260227082552.png",
+    "More Knowledge/Adding BBCode to Rubies.md",
+    "Interactivity/Facts & Conditionals.md",
     "More Knowledge/Dropdowns.md",
     "VN Template Guide/Creating New Characters.md",
     "other.md",
@@ -252,7 +260,6 @@
     "More Knowledge/Upgrading to a new version.md",
     "More Knowledge",
     "Getting Started/Line Types/Folder.md",
-    "Interactivity/Facts & Conditionals.md",
     "Interactivity/Accessing functions and variables in DIISIS.md",
     "Interactivity/Using Event Signals.md",
     "Interactivity",
