@@ -1,90 +1,0 @@
-a: amber
-n: narrator
-END ACTORS
-PAGE 0 ID:1755245262.944--9223372036854761454
-
-LINE i 0.0 ID:1744999497.520--9223372036854774776
-chapter_break(default, default)
-
-LINE t 0.1 ID:1744999497.621--9223372036854774767
-narrator: Thank you for downloading DIISIS. You seem to have set it up so it doesn't explode your project. <mp>Good job!
-narrator: In this demo, you will find the fundamentals of DIISIS' functionalities included in the script [b]"demo_script.json"[/b] so you can get accustomed to how things work. <mp>To open said script, just press on the [img]res://addons/diisis/logos/icon_buttonbw smooth.png[/img] button in the top right corner inside Godot! <mp>Click there now to follow &amp; read along to the tour :3
-amber{amber-emotion|neutral}: Hi! I'm Amber, one of the robotgirls created to anthropomorphize DIISIS.
-narrator: Imagine her, gently watching over you as you work. Like a little guardian robotangel, just for you.
-amber: That I am!
-narrator: What you will see next is a basic demo of choices in DIISIS. You can give any number of options to the player. <mp>For each option, you can attach so-called "Facts" to the option.
-narrator: Facts can either be boolean (true or false) or integers (whole numbers). Then you can check against them having some value at a later point. <mp>In this example, we have a fact called "liked amber". It is boolean and starts out as <fact:liked amber>. If you press the first button, it gets set to true.
-narrator: Isn't she cool?
-
-LINE c 0.2 ID:1744999497.763--9223372036854774754
->Yes I love herID:1755512415.997--9223372036854761465
->No actually, robots are scaryID:1755512416.338--9223372036854761461
-
-LINE t 0.3 ID:1744999497.822--9223372036854774749
-amber{amber-emotion|happy}: I'm really happy to hear that! <mp>I think you're cool too!
-
-LINE t 0.4 ID:1744999497.881--9223372036854774744
-amber{amber-emotion|sad}: I promise I'm not scary!
-
-LINE t 0.5 ID:1744999497.931--9223372036854774739
-narrator: And then we only show the appropriate line.
-narrator{amber-emotion|neutral}: Choices can also jump to any point in the document upon being picked and have other behavior for more advanced use cases.
-narrator: You can find all of that in the [url=https://github.com/SnekOfSpice/dialog-editor/wiki/Line-Type:-Choice]wiki on GitHub[/url].
-
-
-PAGE 1 ID:1755250697.136--9223372036854761389
-
-LINE t 1.0 ID:1744999498.626--9223372036854774735
-narrator: DIISIS' [img]res://addons/diisis/parser/style/icon_line_reader.svg[/img] LineReader can call functions in Godot for more complex behavior. <mp>You can find more info on [url=https://github.com/SnekOfSpice/dialog-editor/wiki/Line-Type:-Instruction]GitHub[/url]. <lc>Calling custom functions is as simple as creating a node that extends LineReader in its script and giving it custom functions. From there, you make calls to the rest of the game architecture. <mp>The template comes with a bunch of functions typical for visual novels, such as the setting of backgrounds, background music, fades to black, etc.
-narrator: To call a function, there are two approaches: Lines and inline. You can dedicate an entire [url=https://github.com/SnekOfSpice/dialog-editor/wiki/Line-Type:-Instruction]Line[/url] to a function, or use an appropriate [url=https://github.com/SnekOfSpice/dialog-editor/wiki/InlineEvaluator#evaluated-tags]Tag[/url] to call them from inside the text.
-
-LINE i 1.1 ID:1744999498.627--9223372036854774732
-shake_camera(20)
-x<shake_camera(20)
-
-LINE t 1.2 ID:1744999498.628--9223372036854774728
-narrator: Like so.
-amber: Or <call:shake_camera(40)>so :3
-narrator: Both approaches are largely equivalent. The most notable difference is that Lines allow you to define custom behavior on rollback and they can implement delays before and after their execution.
-
-LINE i 1.3 ID:1747205915.630--9223372036854773717
-control_camera(1.5, 0, -0.6, 2)
-
-LINE t 1.4 ID:1744999498.628--9223372036854774724
-narrator: This template also comes with CG support. <lc>I will use this to tell you about where I got the music for this demo.
-
-LINE i 1.5 ID:1744999498.629--9223372036854774721
-show_cg(music, 2.0, true)
-
-LINE t 1.6 ID:1744999498.630--9223372036854774717
-narrator: Loyalty Freak Music is anticapitalist and antifascist. <mp>[b]Those are good things.[/b] <ap>...And the music rocks too.
-narrator: CGs are fullscreen illustrations that you use to highlight cool scenes in your visual novel. <mp>They are absolutely not [i]necessary[/i] - but can add some nice polish.
-
-LINE t 1.7 ID:1744999498.630--9223372036854774713
-narrator: When this line ends with the next click, the CG will disappear again. <mp>Tada! <call:hide_cg(2)>
-
-
-PAGE 2 ID:1755250697.380--9223372036854761373
-
-LINE t 2.0 ID:1744999499.058--9223372036854774709
-narrator: With that, we can start to wrap up.
-amber: Change of scenery please!
-
-LINE i 2.1 ID:1744999499.059--9223372036854774706
-set_background(skyline, 2.0)
-
-LINE t 2.2 ID:1744999499.060--9223372036854774702
-narrator: There you go <3
-narrator: Dear reader; This template comes with all the simple things you need to make your own visual novel. There's a guide for the setup [url=https://github.com/SnekOfSpice/dialog-editor/wiki/Using-the-visual-novel-template]here[/url]. I would recommend you still know the very basics of Godot, maybe look into how to use themes.
-
-LINE t 2.3 ID:1744999499.060--9223372036854774698
-narrator: How can you leave this place again? Well you can just terminate the page by not having it point to a page again :3 <mp>(That's the [img]res://addons/diisis/editor/visuals/theme/buttons_ui/ticked_terminate.png[/img] symbol in the top left in DIISIS).
-narrator: This demo and DIISIS entirely was made by [url=https://snekofspice.itch.io/]Snek[/url].
-narrator: Music by [url=https://chezmonplaisir.bandcamp.com/album/chill-for-real]Loyalty Freak Music[/url] and [url=https://lmnlrecords.bandcamp.com/track/its-not-pretty-here]Modela[/url].
-narrator: <call:control_camera(1, 0,0,4)>Amber art by [url=https://x.com/_10qi]10qi[/url].
-narrator: [rainbow freq=1.0 sat=0.8 val=0.8]Go out there and create![/rainbow]
-
-LINE i 2.4 ID:1756801270.874--9223372036854761435
-roll_credits()
-
-
