@@ -1,0 +1,2 @@
+,en_EN
+rubies.boldscream,[b]aaaa[/b]
