@@ -1,0 +1,19 @@
+[remap]
+
+importer="csv_translation"
+type="Translation"
+uid="uid://v67a6xrxqkbk"
+
+[deps]
+
+files=["res://l10n.en_EN.translation"]
+
+source_file="res://l10n.csv"
+dest_files=["res://l10n.en_EN.translation"]
+
+[params]
+
+compress=1
+delimiter=0
+unescape_keys=false
+unescape_translations=true
